--- a/src/components/home.css
+++ b/src/components/home.css
@@ -13,12 +13,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: calc(99vh - 100px);
+    height: calc(100vh - 100px);
 }
 
 /* Max Width */
 @media only screen and (max-width: 700px) {
     .container {
         padding: 0 25px;
+    }
+
+    .container .content {
+        height: 85vh;
     }
 }
