--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -75,11 +75,16 @@ a.logo:hover {
 
 /* Max Width */
 @media only screen and (max-width: 550px) and (max-height: 1024px) {
+    .nav {
+        margin-top: 30px;
+        height: auto;
+    }
+
     .right-nav a:nth-of-type(1n + 1) {
         margin-right: 8px;
     }
 
-    .right-nav a:nth-of-type(3) {
+    .right-nav a:nth-of-type(4) {
         margin-right: 0;
     }
 }
