--- a/src/components/home.css
+++ b/src/components/home.css
@@ -3,26 +3,22 @@
 }
 
 .container {
-    padding: 0 20px;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0px 20px;
 }
 
 .container .content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     height: calc(100vh - 100px);
 }
 
-/* Max Width */
-@media only screen and (max-width: 700px) {
-    .container {
-        padding: 0 25px;
-    }
-
+@media screen and (max-height: 500px) {
     .container .content {
-        height: 85vh;
+        height: auto;
     }
-}
+} 
+
+
