--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,10 +6,16 @@
 .nav {
     display: flex;
     flex-direction: row;
+    align-items: flex-end;
+    height: 100px;
+}
+
+.nav .nav-content {
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 100px;
 }
 
 a {
@@ -73,19 +79,16 @@ a.logo:hover {
     transform: scale(0.9);
 }
 
-/* Max Width */
-@media only screen and (max-width: 550px) and (max-height: 1024px) {
-    .nav {
-        margin-top: 30px;
-        height: auto;
-    }
-
+/* Media Queries */
+@media screen and (max-width: 500px) {
     .right-nav a:nth-of-type(1n + 1) {
-        margin-right: 8px;
+        margin-right: 12px;
     }
 
     .right-nav a:nth-of-type(4) {
         margin-right: 0;
     }
 }
+
+
 
