--- a/src/components/home.css
+++ b/src/components/home.css
@@ -17,7 +17,7 @@
 
 @media screen and (max-height: 500px) {
     .container .content {
-        height: 100vh;
+        /* height: 100vh; */
         min-height: -webkit-fill-available;
     }
 } 
