--- a/src/components/home.css
+++ b/src/components/home.css
@@ -6,19 +6,24 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 0px 20px;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
 }
 
 .container .content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     height: calc(100vh - 100px);
+    height: calc(-webkit-fill-available - 100px);
+
+    border: 1px dashed blue;
 }
 
-/* smartphones, touchscreens */
 @media (hover: none) and (pointer: coarse) {
     .container .content {
-        height: -webkit-fill-available;
+        height: calc(-webkit-fill-available - 100px);
     }
 }
 
