--- a/src/components/home.css
+++ b/src/components/home.css
@@ -3,20 +3,18 @@
 }
 
 .container {
+    /* background-color: #f9f7ff; */
     max-width: 1200px;
     margin: 0 auto;
     padding: 0px 20px;
     min-height: 100vh;
-    min-height: -webkit-fill-available;
 }
 
 .container .content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     height: calc(100vh - 100px);
-    height: -webkit-fill-available;
 }
 
 @media (hover: none) and (pointer: coarse) {
@@ -24,5 +22,3 @@
         height: -webkit-fill-available;
     }
 }
-
-
