--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -49,7 +50,7 @@ a.logo:hover {
 }
 
 .right-nav a {
-    background-color: #f7f7f7;
+    background-color: #ffffff;
     border: 2px solid #e7e7e7;
     border-radius: 50px;
     padding: 12px;
@@ -89,6 +90,4 @@ a.logo:hover {
         margin-right: 0;
     }
 }
-
-
 
