--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -36,7 +36,7 @@ span.name {
 }
 
 a.resume-link {
-    background-color: #ffffff;
+    background-color: #f7f7f7;
     border: 2px solid #e7e7e7;
     border-radius: 8px;
     color: #232323;
