--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -50,7 +50,7 @@ a.logo:hover {
 }
 
 .right-nav a {
-    background-color: #ffffff;
+    background-color: #f7f7f7;
     border: 2px solid #e7e7e7;
     border-radius: 50px;
     padding: 12px;
