--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -61,26 +61,25 @@
 
 .profile-picture img {
     border-radius: 12px;
-    height: 100%;
+    height: 50vw;
     max-height: 500px;
     max-width: 100%;
     transition: all 150ms linear;
-    width: 100%;
 }
 
 .profile-picture:hover img {
-    transform: scale(1.05);
+    transform: scale(1);
 }
 
 .profile-picture .picture-content {
-    background: linear-gradient(transparent, #313131c0);
+    background: linear-gradient(transparent, transparent, #313131e1);
     border-radius: 12px;
     height: 100%;
     left: 0;
     opacity: 0;
     position: absolute;
     top: 0%;
-    transition: all 150ms linear;
+    transition: all 300ms linear;
     width: 100%;
 }
 
@@ -91,7 +90,7 @@
     font-size: 1.25rem;
     font-weight: 500;
     position: absolute;
-    transition: all 150ms linear;
+    transition: all 150ms ease-out 300ms;
 }
 
 .profile-picture:hover .picture-content {
@@ -105,7 +104,11 @@
 @media (max-width: 850px) {
     .hero {
         color: #313131;
-        margin: 7vw auto 7vw;
+        margin: 10vw auto 10vw;
+    }
+
+    .profile-picture {
+        margin: 10vw auto 10vw;
     }
 
     .bio {
@@ -116,28 +119,24 @@
         font-size: 1.15rem;
         line-height: 2.8rem;
     }
-
-    .profile-picture {
-        margin: 7vw auto 7vw;
-    }
 }
 
 @media (max-width: 500px) {
     .header h1 {
-        font-size: 3.3rem;
+        font-size: 3rem;
     }
 
     .header h1:nth-of-type(1) {
         margin-bottom: 5px;
     }
 
+    .profile-picture .picture-content p {
+        font-size: 1rem;
+    }
+
     .bio p {
         font-size: 1rem;
         line-height: 2.5rem;
-    }
-
-    .profile-picture .picture-content p {
-        font-size: 1rem;
     }
 }
 
