--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,7 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 
-.main {
-  font-family: 'Rubik', sans-serif;
-  padding: 0;
+*::selection {
+  background: #e7e7e7;
+}
+
+* {
   margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+  transition: all 0.2s ease-out;
+}
+
+body {
+  background-color: #f7f7f7;
+  font-family: "Inter", sans-serif;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+/* Dark Preference */
+@media (prefers-color-scheme: dark) {
+  *::selection {
+    background: #3e3c49;
+  }
+  
+  body {
+    background-color: #201f25;
+  }
 }
