--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,234 +1,31 @@
-/* Animations */
-@keyframes fadeIn {
-    0% {opacity:0; transform: translateY(16px);}
-    100% {opacity:1; transform: translateY(0);}
-}
-
-@-moz-keyframes fadeIn {
-    0% {opacity:0; transform: translateY(16px);}
-    100% {opacity:1; transform: translateY(0);}
-}
-
-@-webkit-keyframes fadeIn {
-    0% {opacity:0; transform: translateY(16px);}
-    100% {opacity:1; transform: translateY(0);}
-}
-
-/*  */
-/*  */
-
-/* Container */
-.container {
-    animation: fadeIn 1s ease-out;
-    -webkit-animation: fadeIn 1s ease-out;
-    -moz-animation: fadeIn 1s ease-out;
-
-    margin: 0 auto;
-    max-width: 640px;
-    padding: 20px;
-}
-
-/*  */
-/*  */
-
-/* Navbar */
-.nav {
-    background-color: #f7f7f7dd;
-    border-bottom: 2px solid #f1f1f1;
-    box-sizing: border-box;
-    height: 60px;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 99;
-}
-
-.nav .nav-navbar {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-    justify-content: space-between;
-    margin: 0 auto;
-    max-width: 640px;
-    padding: 0 20px;
-    position: relative;
-    text-align: center;
-    z-index: 99;
-}
-
-/*  */
-/*  */
-
-/* Hero */
-.hero {
-    border-bottom: 2px solid #f1f1f1;
-    margin: 40px auto 0;
-    padding: 150px 0;
-
-}
-
-/* Image */
-.hero .hero-image {
-    align-items: center;
-    background-color: #e7e7e7;
-    border-radius: 50%;
-    display: flex;
-    height: 300px;
-    justify-content: center;
-    margin: 0 auto;
-    width: 300px;
-}
-
-.hero .hero-image img {
-    width: 200px;
-}
-
-/* Description */
-.hero .hero-description {
-    margin: 150px auto 0;
-    overflow: hidden;
-}
-
-.hero .hero-description a {
-    color: rgb(73, 69, 198);
-}
-
-.hero .hero-description a:hover {
-    opacity: 1;
-    text-decoration: underline;
-}
-
-/* Links */
-.hero .hero-links {
-    margin: 100px auto 0;
-}
-
-.hero .hero-links a {
-    display: inline-flex;
-    margin-right: 32px;
-}
-
-.hero .hero-links a:last-child {
-    margin-right: 0;
-}
-
-/*  */
-/*  */
-
-.exp {
-    padding: 150px 0;
-}
-
-.exp .exp-header p {
-    color: #878787;
-    font-weight: 600;
-}
-
-.exp .exp-list {
-    margin-top: 75px;
-}
-
-.exp .exp-list ul {
-    list-style-type: none;
-}
-
-.exp .exp-list li {
+/* Home - Wrapper */
+.home-wrapper {
     margin-bottom: 50px;
+    padding: 0px 20px;
 }
 
-.exp .exp-list li:last-child {
-    margin-bottom: 0;
+.home-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin-inline: auto;
+    max-width: 1264px;
 }
 
-.exp .exp-list .exp-list-item p {
-    overflow: hidden;
+.box2,
+.box3 {
+    grid-column: span 2;
 }
 
-/*  */
-/*  */
+.box5 {
+    grid-column-end: 5;
+    grid-column-start: 4;
 
-/* Mobile View */
-@media screen and (max-width: 750px) {
-    .hero,
-    .exp {
-        padding: 75px 0;
-    }
-
-    .hero .hero-image {
-        height: 250px;
-        width: 250px;
-    }
-
-    .hero .hero-image img {
-        width: 150px;
-    }
-
-    .hero .hero-description {
-        margin: 75px auto 0;
-    }
-
-    .hero .hero-links {
-        margin: 50px auto 0;
-    }
-
-    .hero .hero-links a {
-        margin-right: 24px;
-    }
-
-    .hero .hero-links a:last-child {
-        margin-right: 0;
-    }
-
-    .exp .exp-list {
-        margin-top: 50px;
-    }
-
-    .exp .exp-list li {
-        margin-bottom: 35px;
-    }
-    
-    .exp .exp-list li:last-child {
-        margin-bottom: 0;
-    }
+    grid-row-end: 3;
+    grid-row-start: 1;
 }
 
-/*  */
-/*  */
-
-/* Reduce Animation */
-@media (prefers-reduced-motion) {
-    .container {
-        animation: none;
-        -webkit-animation: none;
-        -moz-animation: none;
-    }
-}
-
-/*  */
-/*  */
-
-/* Dark Preference */
-@media (prefers-color-scheme: dark) {
-    .nav {
-        background-color: #201f25dd;
-        border-bottom: 2px solid #313131;
-    }
-
-    .hero {
-        border-bottom: 2px solid #313131;
-    }
-
-    .hero .hero-image {
-        background-color: #e7e7e71a;
-    }
-
-    .hero .hero-image img {
-        opacity: 0.85;
-    }
-
-    .hero .hero-description a {
-        color: rgb(129, 126, 215);
-    }
+.box7 {
+    grid-column-end: 5;
+    grid-column-start: 4;
 }
