--- a/src/components/Grids/DoubleWide/doubleWide.css
+++ b/src/components/Grids/DoubleWide/doubleWide.css
@@ -27,3 +27,19 @@
         background-color: rgb(40, 40, 50);
     }
 }
+
+@media screen and (max-width: 640px) {
+    .dg-w-wrapper {
+        flex-direction: column;
+        height: auto;
+        padding: 50px 30px;
+        text-align: center;
+    }
+
+    .dg-w-body-container {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        margin: 40px 0px 0px;
+    }
+}
