--- a/src/components/Grids/Single/single.css
+++ b/src/components/Grids/Single/single.css
@@ -31,3 +31,13 @@
         background-color: rgb(40, 40, 50);
     }
 }
+
+@media screen and (max-width: 600px) {
+    .sg-image-container {
+        margin: 50px 30px 0px;
+    }
+
+    .sg-body-container {
+        padding: 0px 30px 50px;
+    }
+}
