--- a/src/components/Grids/SingleButton/singleButton.css
+++ b/src/components/Grids/SingleButton/singleButton.css
@@ -10,51 +10,6 @@
     height: 300px;
 }
 
-.sg-icon-container {
-    margin-bottom: 32px;
-}
-
-.sg-button-container {
-    background-color: #98A9BB;
-    border-radius: 5rem;
-    display: flex;
-    height: 20px;
-    position: relative;
-    width: 60px;
-}
-
-.sg-button-container .button-click {
-    border-radius: 3rem;
-    box-sizing: border-box;
-    cursor: pointer;
-    height: 40px;
-    left: -10px;
-    opacity: 0;
-    position: absolute;
-    top: -10px;
-    transition: all 0.2s ease-in-out;
-    width: 40px;
-}
-
-.sg-button-container .button-click:last-child {
-    background: green;
-    left: 30px;
-}
-
-.sg-button-container #sg-marker {
-    background-color: #FFF;
-    border: 5px solid #525F77;
-    border-radius: 3rem;
-    box-sizing: border-box;
-    cursor: pointer;
-    height: 40px;
-    left: -10px;
-    position: absolute;
-    top: -10px;
-    transition: all 0.2s ease-out;
-    width: 40px;
-}
-
 .sg-button-icon__light {
     animation: iconLight 0.5s ease-in-out;
     position: relative;
@@ -85,9 +40,11 @@
     .sg-button-wrapper {
         background-color: rgb(40, 40, 50);
     }
+}
 
-    .sg-button-container #sg-marker {
-        /* background-color: rgb(70, 70, 85); */
-        background-color: #C7C7C7;
+@media screen and (max-width: 600px) {
+    .sg-button-wrapper {
+        height: auto;
+        padding: 50px 30px;
     }
 }
