--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,31 +1,129 @@
 /* Home - Wrapper */
 .home-wrapper {
-    margin-bottom: 50px;
-    padding: 0px 20px;
+    padding: 0px 20px 50px;
 }
 
 .home-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 20px;
     margin-inline: auto;
-    max-width: 1264px;
+    max-width: 800px;
 }
 
-.box2,
+.box2 {
+    grid-row-start: 1;
+}
+
+.box5 {
+    grid-row-start: 2;
+}
+
+.box4 {
+    grid-row-start: 3;
+}
+
+/* .box2 {
+    grid-column-end: 3;
+    grid-column-start: 1;
+
+    grid-row-end: 2;
+    grid-row-start: 1;
+}
+
+.box4 {
+    grid-row-start: 2;
+}
+
+.box1,
+.box4,
+.box5,
+.box6,
+.box7 {
+    column-span: 1;
+}
+
 .box3 {
     grid-column: span 2;
 }
 
 .box5 {
-    grid-column-end: 5;
-    grid-column-start: 4;
+    grid-row: span 2;
+} */
 
-    grid-row-end: 3;
-    grid-row-start: 1;
+@media screen and (min-width: 600px) {
+    .home-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        margin-inline: auto;
+        max-width: 800px;
+    }
+    
+    .box2 {
+        grid-column-end: 3;
+        grid-column-start: 1;
+    
+        grid-row-end: 2;
+        grid-row-start: 1;
+    }
+    
+    .box4 {
+        grid-row-start: 2;
+    }
+    
+    .box1,
+    .box4,
+    .box5,
+    .box6,
+    .box7 {
+        column-span: 1;
+    }
+    
+    .box3 {
+        grid-column: span 2;
+    }
+    
+    .box5 {
+        grid-row: span 2;
+    }
 }
 
-.box7 {
-    grid-column-end: 5;
-    grid-column-start: 4;
+@media screen and (min-height: 1150px) and (min-width: 1310px) {
+    .home-wrapper {
+        align-self: center;
+        display: flex;
+        flex-direction: column;
+        height: calc(100vh - 205px);
+        justify-content: center;
+        padding: 0px 20px;
+    }
+}
+
+@media screen and (min-width: 1310px) {
+    .home-container {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 20px;
+        margin-inline: auto;
+        max-width: 1264px;
+    }
+    
+    .box2,
+    .box3 {
+        grid-column: span 2;
+    }
+    
+    .box5 {
+        grid-column-end: 5;
+        grid-column-start: 4;
+    
+        grid-row-end: 3;
+        grid-row-start: 1;
+    }
+    
+    .box7 {
+        grid-column-end: 5;
+        grid-column-start: 4;
+    }
 }
