--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,6 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+/* DM Sans Font */
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap');
+/* Noto Serif Font */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 /* *::selection {
   background: #e7e7e7;
@@ -9,28 +11,5 @@
 * {
   margin: 0;
   padding: 0;
-}
-
-html {
-  scroll-behavior: smooth;
-  transition: all 0.2s ease-out;
-}
-
-body {
-  background-color: #F7F2F1;
-  font-family: "DM Sans", sans-serif;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-/* Dark Preference */
-@media (prefers-color-scheme: dark) {
-  /* *::selection {
-    background: #3e3c49;
-  } */
-  
-  body {
-    background-color: rgb(30, 30, 40);
-  }
+  transition: all 0.2s;
 }
