--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,6 +1,8 @@
 .hero {
   background-color: #26394F;
   padding: 150px 30px;
+
+  border: 2px dashed red;
 }
 
 .hero-wrapper {
@@ -9,6 +11,8 @@
   flex-direction: column-reverse;
   margin: auto;
   max-width: 520px;
+
+  border: 2px dashed blue;
 }
 
 .hero-wrapper__text-wrapper {
@@ -27,11 +31,13 @@
 }
 
 .hero-wrapper__underlined {
-  display: flex;
-  position: absolute;
-  right: -13px;
-  top: calc(100% + 6px);
-  transform: rotate(-2deg);
+  background: url("../../images/underline.svg") no-repeat bottom;
+  display: inline-block;
+  /* position: absolute; */
+  /* right: -13px; */
+  /* top: 100% ; */
+
+  /* border: 2px dashed red; */
 }
 
 .hero-wrapper__body {
@@ -39,15 +45,15 @@
 }
 
 .hero-wrapper__image {
-  height: 400px;
-  max-width: 300px;
+  max-height: 400px;
+  /* max-width: 300px; */
   object-fit: cover;
-  object-position: center center;
+  object-position: bottom center;
 }
 
 @media (min-width: 768px) {
   .hero {
-    padding: 100px 60px;
+    padding: 150px 60px;
   }
 
   .hero-wrapper {
@@ -57,6 +63,12 @@
     gap: min(2vw, 100px);
     max-height: min-content;
     max-width: fit-content;
+  }
+
+  .hero-wrapper__image {
+    /* max-width: 300px; */
+    /* width: auto; */
+    max-height: 350px;
   }
 
   .hero-wrapper__text-wrapper {
