--- a/src/components/common/Button/button.css
+++ b/src/components/common/Button/button.css
@@ -19,3 +19,9 @@
   font-weight: 700 !important;
   transition: none !important;
 }
+
+@media (prefers-reduced-motion) {
+  .button__wrapper {
+    transition: none !important;
+  }
+}
