--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -12,6 +12,10 @@
   margin-bottom: 20px;
 }
 
+.about-me__open-modal {
+  cursor: pointer;
+}
+
 @media (min-width: 768px) {
   .about-me {
     padding: 200px 60px 100px;
