--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -12,12 +12,10 @@
 }
 
 .skills-wrapper__overlay {
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.44) 39.58%,
-    rgba(0, 0, 0, 0.9) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.44) 39.58%,
+      rgba(0, 0, 0, 0.9) 100%);
   box-sizing: border-box;
   height: 100%;
   left: 0px;
@@ -87,7 +85,7 @@
 }
 
 .skills-wrapper__gray-bg {
-  background-color: #F7F7F7;
+  background-color: #f7f7f7;
   bottom: 0px;
   box-sizing: border-box;
   height: 80%;
@@ -109,9 +107,9 @@
   }
 
   .skills-wrapper__design,
-.skills-wrapper__dev {
-  padding: 50px;
-}
+  .skills-wrapper__dev {
+    padding: 50px;
+  }
 
   .skills-wrapper__dev {
     margin-top: 0px;
@@ -132,5 +130,14 @@
 
   .skills-wrapper__body {
     opacity: 1;
+  }
+}
+
+@media (prefers-reduced-motion) {
+
+  .skills-wrapper__header,
+  .skills-wrapper__design:hover .skills-wrapper__body,
+  .skills-wrapper__dev:hover .skills-wrapper__body {
+    transition: none !important;
   }
 }
