--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,8 +1,8 @@
 /* DM Sans Font */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 /* Noto Serif Font */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 /* *::selection {
   background: #e7e7e7;
@@ -12,4 +12,10 @@
   margin: 0;
   padding: 0;
   transition: all 0.2s;
+}
+
+@media (prefers-reduced-motion) {
+  * {
+    transition: none;
+  }
 }
