--- a/src/components/Work/work.css
+++ b/src/components/Work/work.css
@@ -5,12 +5,12 @@
 .work-wrapper {
   display: flex;
   flex-direction: column-reverse;
-  gap: 40px;
   margin: auto;
   max-width: fit-content;
 }
 
 .work-wrapper__left {
+  margin-top: 20px;
   max-width: 550px;
 }
 
@@ -27,5 +27,9 @@
   .work-wrapper {
     flex-direction: row;
     gap: min(10vw, 200px);
+  }
+
+  .work-wrapper__left {
+    margin-top: 0px;
   }
 }
