--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -128,6 +128,11 @@
     transition: none;
   }
 
+  .skills-wrapper__design:hover .skills-wrapper__header,
+  .skills-wrapper__dev:hover .skills-wrapper__header {
+    bottom: auto;
+  }
+
   .skills-wrapper__body {
     opacity: 1;
   }
