--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -7,7 +7,7 @@
   justify-content: center;
   left: 0px;
   overflow-y: scroll;
-  padding: 30px;
+  padding: 20px;
   position: fixed;
   top: 0px;
   width: 100%;
@@ -18,6 +18,7 @@
   background-color: #FFF;
   box-sizing: border-box;
   height: fit-content;
+  margin: 0 auto;
   max-width: 1000px;
   overflow-y: scroll;
   padding: 50px 30px;
@@ -54,7 +55,17 @@
   }
 }
 
-@media (max-width: 600px) and (max-height: 1150px) {
+@media (max-width: 450px) {
+  .modal {
+    padding: 0px;
+  }
+
+  .modal-wrapper {
+    padding: 50px 20px;
+  }
+}
+
+@media (max-height: 900px), (max-width: 900px) {
   .modal {
     display: block;
   }
