--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -15,3 +15,15 @@
     opacity: 0;
   }
 }
+
+/* education & salesforce */
+.simple-grid {
+  display: grid;
+  gap: 10px;
+}
+
+.two-column-grid {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
