--- a/src/components/borderedLinkBlock/borderedLinkBlock.css
+++ b/src/components/borderedLinkBlock/borderedLinkBlock.css
@@ -1,28 +1,53 @@
 .bordered-link-block {
-  background-color: #fff;
-  border: 1px solid #f6f0f0;
+  display: flex;
+  border: 0.25rem solid #f6f0f0;
   border-radius: 10px;
+  box-sizing: border-box;
   gap: 10px;
+  position: relative;
 }
 
 .bordered-link-block:hover {
   animation: shake 1.2s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   animation-iteration-count: 3;
-  transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
 }
 
+.bordered-link-block::after {
+  align-items: center;
+  background-color: #f6f0f0f8;
+  color: rgba(65, 70, 77, 0.81);
+  content: "View Site";
+  display: flex;
+  font-family: "Inter", sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  height: 100%;
+  justify-content: center;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  transform: scaleX(0) scaleY(0);
+  transform-origin: center;
+  transition: transform 0.3s 0.1s;
+  width: 100%;
+}
+
+.bordered-link-block:hover::after {
+  transform: scaleX(1) scaleY(1);
+}
+
 .bordered-link-block:hover img {
-  transform: scale(0.90);
+  transform: scale(0.9);
 }
 
 .bordered-link-block__cta {
   align-items: center;
   display: flex;
-  height: 100%;
+  height: fit-content;
   justify-content: center;
   padding: 30px 40px;
-  width: 100%;
+  width: fit-content;
 }
 
 .bordered-link-block__cta img {
