--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -23,7 +23,9 @@
 }
 
 .two-column-grid {
+  align-items: center;
   display: grid;
   gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-content: center;
+  grid-template-columns: minmax(500px, 1fr) minmax(100px, 200px);
 }
