--- a/src/components/borderedLinkBlock/borderedLinkBlock.css
+++ b/src/components/borderedLinkBlock/borderedLinkBlock.css
@@ -1,6 +1,5 @@
 .bordered-link-block {
   display: flex;
-  border: 0.25rem solid #f6f0f0;
   border-radius: 10px;
   box-sizing: border-box;
   gap: 10px;
@@ -13,17 +12,11 @@
   backface-visibility: hidden;
 }
 
-.bordered-link-block::after {
-  align-items: center;
-  background-color: #f6f0f0f8;
-  color: rgba(65, 70, 77, 0.81);
-  content: "View Site";
-  display: flex;
-  font-family: "Inter", sans-serif;
-  font-size: 1rem;
-  font-weight: 600;
+.bordered-link-block::before {
+  background-color: #93a0a763;
+  border-radius: 5px;
+  content: "";
   height: 100%;
-  justify-content: center;
   left: 0px;
   position: absolute;
   top: 0px;
@@ -33,7 +26,7 @@
   width: 100%;
 }
 
-.bordered-link-block:hover::after {
+.bordered-link-block:hover::before {
   transform: scaleX(1) scaleY(1);
 }
 
@@ -43,6 +36,7 @@
 
 .bordered-link-block__cta {
   align-items: center;
+  aspect-ratio: 1 / 1;
   display: flex;
   height: fit-content;
   justify-content: center;
