--- a/src/components/borderedListBlock/borderedListBlock.css
+++ b/src/components/borderedListBlock/borderedListBlock.css
@@ -3,16 +3,17 @@
   display: grid;
   gap: 50px;
   justify-content: space-between;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   width: 100%;
 }
 
 .bordered-list-block .list-image-wrapper {
-  background-color: rgb(134, 157, 138);
+  background-color: rgba(134, 157, 138, 0.1);
   border: 0.1rem solid #ffffff0c;
   border-radius: 2.5rem;
   box-sizing: border-box;
   display: flex;
+  grid-row: 1;
   justify-content: center;
   max-height: 400px;
   overflow: hidden;
