--- a/src/components/resumeBlock/resumeBlock.css
+++ b/src/components/resumeBlock/resumeBlock.css
@@ -7,6 +7,7 @@
   column-gap: 10px;
   display: flex;
   flex-wrap: wrap;
+  grid-template-columns: repeat(2, 1fr);
   justify-content: space-between;
   row-gap: 0px;
   padding: 20px;
@@ -15,6 +16,7 @@
 .resume-header #position,
 .resume-header #period {
   font-size: 1rem !important;
+  text-align: end;
 }
 
 .resume-content {
@@ -22,4 +24,16 @@
   flex-direction: column;
   gap: 10px;
   padding: 0px 20px;
+}
+
+@media only screen and (max-width: 800px) {
+  .resume-header {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
+  .resume-header #position,
+  .resume-header #period {
+    text-align: start;
+  }
 }
