--- a/src/components/borderedListBlock/borderedListBlock.css
+++ b/src/components/borderedListBlock/borderedListBlock.css
@@ -3,8 +3,21 @@
 	display: grid;
 	gap: 50px;
 	justify-content: space-between;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(2, 1fr);
 	width: 100%;
+}
+
+.motion-img-wrapper:nth-of-type(even) {
+  grid-row-start: 1;
+}
+
+@media only screen and (max-width: 700px) {
+	.bordered-list-block {
+		grid-template-columns: 1fr;
+	}
+	.motion-img-wrapper {
+		grid-row-start: 1;
+	}
 }
 
 .bordered-list-block .list-image-wrapper {
